catch, derby and angler updates
